# PathTracing

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Light.h  Makefile  RNG.cpp  RNG.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Utils.cpp  Utils.h  Vec3f.cpp  Vec3f.h  main  main.cpp  render.sh  x.raw
RawReader/: reader.py
